# Yggdrasil

./: .dockerignore  .env.example  .env.test  .gitattributes  .gitignore  ACCESSIBILITY.md  AGENTS.md  API_SPEC.md  ARCHITECTURE.md  CHANGELOG.md  CODING_STANDARDS.md  COMBAT_DESIGN.md  CONTRIBUTING.md  DATABASE_SCHEMA.md  DATA_GOVERNANCE.md  DOCUMENTATION_AUDIT.md  DOCUMENTATION_GOVERNANCE.md  JOB_SYSTEM.md  MVP_ROADMAP.md  OBSERVABILITY.md  OPERATIONS_RUNBOOK.md  PRODUCT_VISION.md  RAG_DESIGN.md  README.md  RELEASE_CHECKLIST.md  RELEASE_NOTES.md  RELEASE_PROCESS.md  RELEASE_STATUS.md  RISK_REGISTER.md  SECURITY.md  SECURITY_GUIDELINES.md  SERVICE_LEVEL_OBJECTIVES.md  TASKS.md  TECH_DEBT.md  TESTING_STRATEGY.md  WINDOWS_QUICKSTART.md  WORLD_BIBLE.md  asset_verification.txt  compose.test.yaml  compose.yaml  (+17 more)
backend/: alembic.ini  pyproject.toml  uvicorn_logging.json
backend/app/: __init__.py  main.py
backend/app/ai/: __init__.py  budget.py  context.py  contracts.py  errors.py  factory.py  orchestrator.py  prompt.py  prompt_builder.py  registry.py  validation.py
backend/app/api/: combat.py  dependencies.py  gameplay.py  health.py  narrative.py  save.py  world.py
backend/app/core/: __init__.py  config.py  database.py  health.py  logging.py  metrics.py  middleware.py  uvicorn_logging.py
backend/app/engines/: __init__.py  character.py  combat.py  equipment.py  inventory.py  navigation.py  world.py
backend/app/models/: __init__.py  base.py  combat.py  gameplay.py  idempotency_record.py  memory.py  narrative.py  save_game.py  world.py
backend/app/rag/: __init__.py  cache.py  celery_app.py  tasks.py  (+8 more)
(+211 files in other folders)
