[tool.poetry]
name = "yggdrasil-chronicles-backend"
version = "1.0.0"
description = "Validated context-grounded narrative over deterministic JRPG systems"
authors = ["Yggdrasil Chronicles Contributors"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
alembic = "1.16.1"
asyncpg = "0.30.0"
celery = { version = "5.6.3", extras = ["redis"] }
fastapi = "0.136.3"
httpx = "0.28.1"
prometheus-client = "0.21.1"
pydantic-settings = "2.9.1"
redis = "6.1.0"
sqlalchemy = { version = "2.0.41", extras = ["asyncio"] }
starlette = ">=1.3.1"
structlog = "25.3.0"
uvicorn = { version = "0.34.2", extras = ["standard"] }
aiosqlite = "^0.22.1"

[tool.poetry.group.dev.dependencies]
black = "26.5.1"
mypy = "1.15.0"
pip-audit = "2.10.1"
pytest = "9.0.3"
pytest-asyncio = "1.4.0"
pytest-cov = "7.1.0"
ruff = "0.11.10"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "ASYNC"]

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
addopts = "--strict-markers --strict-config"
asyncio_default_fixture_loop_scope = "session"
asyncio_default_test_loop_scope = "session"
testpaths = ["../tests"]
pythonpath = ["."]

[tool.coverage.run]
branch = true
source = ["app"]

[tool.coverage.report]
fail_under = 80
show_missing = true
